--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div id="page-logo">
-            <a href="/home.html">traveller</a>
+            <a href="/index.html">traveller</a>
         </div>
         <nav>
             <ul>
